--- a/RideTogether/app/src/main/AndroidManifest.xml
+++ b/RideTogether/app/src/main/AndroidManifest.xml
@@ -167,8 +167,8 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <activity
             android:name=".addFriend"
-            android:label="@string/title_activity_add_friend"
-            android:theme="@style/AppTheme.popup"></activity>
+            android:label="@string/title_activity_add_friend">
+           </activity>
     </application>
 
 </manifest>
