--- a/RideTogether/app/src/main/AndroidManifest.xml
+++ b/RideTogether/app/src/main/AndroidManifest.xml
@@ -150,6 +150,9 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
+            android:name=".MapsActivity2"
+            android:label="@string/title_activity_maps2" />
+        <activity
             android:name=".TripInfo"
             android:label="@string/title_activity_maps" />
         <activity
