--- a/RideTogether/app/src/main/AndroidManifest.xml
+++ b/RideTogether/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/largelogo"
         android:label="@string/app_name"
         android:hardwareAccelerated="false"
         android:theme="@style/Theme.AppCompat.NoActionBar">
