succesfully implemented a new way to plan the route, currently working on uploading bike of the day images-feature

--- a/RideTogether/gradle.properties
+++ b/RideTogether/gradle.properties
@@ -19,6 +19,6 @@
 target=android-22
 android.library=true
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms256m -Xmx1024m
 org.gradle.parallel=true
 org.gradle.configureondemand=true
