--- a/RideTogether/app/src/main/AndroidManifest.xml
+++ b/RideTogether/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <permission
         android:name="donate.cinek.wit.ie.ridetogether.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
 
     <uses-permission android:name="donate.cinek.wit.ie.ridetogether.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -91,8 +93,11 @@
             android:name=".LoginIn"
             android:label="Sign In" />
         <activity
-            android:name=".Trip"
-            android:label="Trip" />
+        android:name=".Trip"
+        android:label="Trip" />
+        <activity
+            android:name=".BikeOfTheDay"
+            android:label="BikeOfTheDay" />
         <activity
             android:name=".Options"
             android:label="@string/title_activity_options" />
