--- a/RideTogether/app/src/main/AndroidManifest.xml
+++ b/RideTogether/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
         android:allowBackup="true"
         android:icon="@drawable/largelogo"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:hardwareAccelerated="false"
         android:theme="@style/Theme.AppCompat.NoActionBar">
 
