Zooming on map depending on trip length completed

--- a/RideTogether/app/build.gradle
+++ b/RideTogether/app/build.gradle
@@ -56,5 +56,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.1.0'
     compile 'com.google.android.gms:play-services-identity:8.1.0'
     compile 'com.google.android.gms:play-services-gcm:8.1.0'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile files('libs/sinch-android-rtc-3.9.3.jar')
 }
